--- a/index.html
+++ b/index.html
@@ -444,17 +444,16 @@
             data-aos-duration="1000"
           >
             <p class="mb-3">
-              Resimen Mahasiswa (Menwa) Mahawarman Batalyon III/Yudha Jaya Kompi
-              E Universitas Pasundan merupakan unit organisasi kemahasiswaan
-              yang berlandaskan Tri Dharma Perguruan Tinggi, dengan fokus pada
-              pembinaan mahasiswa untuk menjadi kader bela negara yang tangguh.
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Atque
+              corporis odit sit dolorem esse ea, minus, ad voluptate quam, eius
+              quisquam qui sint! Praesentium officiis illum ex accusamus dicta
+              nobis a, nesciunt delectus odit aperiam.
             </p>
             <p>
-              Kami berkomitmen untuk mengembangkan potensi mahasiswa dalam aspek
-              kepemimpinan, disiplin, dan etos kerja, sejalan dengan nilai-nilai
-              Pancasila dan UUD 1945. Melalui berbagai program pelatihan dan
-              pengabdian, Menwa Unpas berupaya mencetak generasi muda yang siap
-              berkontribusi positif bagi bangsa dan negara.
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Atque
+              corporis odit sit dolorem esse ea, minus, ad voluptate quam, eius
+              quisquam qui sint! Praesentium officiis illum ex accusamus dicta
+              nobis a, nesciunt delectus odit aperiam.
             </p>
             <a href="tentang-kami.php" class="btn btn-primary mt-3"
               >Baca Selengkapnya <i class="fas fa-arrow-right ms-2"></i
