--- a/index.html
+++ b/index.html
@@ -390,7 +390,7 @@
           />
           <h1 class="display-4 fw-bold">MENWA Mahawarman Kompi E</h1>
           <h5 class="lead mb-4">
-            Resimen Mahasiswa Mahawarman Batalyon III/Yudha Jaya Universitas
+            Resimen Mahasiswa Mahawarman Batalyon IV/E Universitas
             Pasundan
           </h5>
           <hr class="mx-auto my-4" />
