--- a/index.html
+++ b/index.html
@@ -284,6 +284,9 @@
         .navbar-brand {
           font-size: 1.2rem;
         }
+        .pendaftaran {
+          margin: 0 0 2rem 0;
+        }
       }
 
       @media (min-width: 992px) {
@@ -399,7 +402,7 @@
           </p>
           <a
             href="pendaftaran.php"
-            class="btn btn-primary btn-lg shadow-sm"
+            class="btn btn-primary btn-lg shadow-sm pendaftaran"
             data-aos="zoom-in"
             data-aos-delay="500"
           >
