--- a/index.html
+++ b/index.html
@@ -287,6 +287,9 @@
         .pendaftaran {
           margin: 0 0 2rem 0;
         }
+        .about-1 {
+          margin: 0 0 2rem 0;
+        }
       }
 
       @media (min-width: 992px) {
@@ -410,7 +413,7 @@
           </a>
           <a
             href="#about"
-            class="btn btn-outline-light btn-lg ms-3 shadow-sm"
+            class="btn btn-outline-light btn-lg ms-3 shadow-sm about-1"
             data-aos="zoom-in"
             data-aos-delay="700"
           >
